bacon: overlay: Enable doze power saving mode
* This is set to false by default and needs to be turned on per device
  depending if the device supports SENSOR_TYPE_SIGNIFICANT_MOTION

* Saw this when comparing aosp vs the factory image good thing i caught
  this MAJOR FEATURE!!

More info here: https://source.android.com/devices/tech/power/mgmt.html

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -409,4 +409,7 @@
         <item>LPP_PROFILE=0</item>
         <item>A_GLONASS_POS_PROTOCOL_SELECT=0</item>
     </string-array>
+
+    <!-- Enable doze powersaving mode -->
+    <bool name="config_enableAutoPowerModes">true</bool>
 </resources>
