bacon: overlay: Allow GMS to access persistent data partition
This fixes nonfunctioning factory reset protection and addresses
numerous PersistentDataBlockService errors during boot up.

Change-Id: Ifb24b2cffc814a3c2f61eda619f2a5cbe173d0f8

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -409,4 +409,7 @@
         <item>LPP_PROFILE=0</item>
         <item>A_GLONASS_POS_PROTOCOL_SELECT=0</item>
     </string-array>
+
+    <!-- Flag indicating which package name can access the persistent data partition -->
+    <string name="config_persistentDataPackageName" translatable="false">com.google.android.gms</string>
 </resources>
