--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -297,4 +297,7 @@
         <item>A_GLONASS_POS_PROTOCOL_SELECT=0</item>
         <item>GPS_LOCK=0</item>
     </string-array>
+
+    <!-- Night Mode -->
+    <bool name="config_nightDisplayAvailable">true</bool>
 </resources>
