--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -37,4 +37,7 @@
 
     <!-- Device specific doze package -->
     <string name="config_customDozePackage">co.potatoproject.settings.doze/co.potatoproject.settings.doze.DozeSettingsActivity</string>
+
+    <!-- If the Storage Manager settings are enabled. -->
+    <bool name="config_storage_manager_settings_enabled">true</bool>
 </resources>
