--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -36,7 +36,7 @@
     <bool name="config_show_regulatory_info">true</bool>
 
     <!-- Device specific doze package -->
-    <string name="config_customDozePackage">co.potatoproject.settings.doze/co.potatoproject.settings.doze.DozeSettingsActivity</string>
+    <!-- string name="config_customDozePackage">co.potatoproject.settings.doze/co.potatoproject.settings.doze.DozeSettingsActivity</string -->
 
     <!-- If the Storage Manager settings are enabled. -->
     <bool name="config_storage_manager_settings_enabled">true</bool>
